objects/Brand_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Brand_Email__c</fullName>
        <label>Brand Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Id__c</fullName>
        <label>Brand Id</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Brand_Phone__c</fullName>
        <label>Brand Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Community_Id__c</fullName>
        <label>Community Id **Not Used</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Name__c</fullName>
        <label>Community Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Brand_Email__c</fullName>
        <label>Inbound Brand Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Privacy_Email__c</fullName>
        <label>Outbound Privacy Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Personal_Info_Link__c</fullName>
        <label>Personal Info Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Privacy_Auto_Response_Email_Template__c</fullName>
        <label>Privacy Auto Response Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Email__c</fullName>
        <label>Privacy Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Policy__c</fullName>
        <label>Privacy Policy</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Brand Setting</label>
    <pluralLabel>Brand Settings</pluralLabel>
</CustomObject>